--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 
 </head>
 
@@ -39,8 +40,10 @@
         </div>
 
     </nav>
-    {{embed}}
 
+    <main class="px-8 py-4">
+        {{embed}}
+    </main>
 
 </body>
 
