--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -17,24 +17,19 @@
 
             <nav>
                 <ul class="flex items-center justify-between font-semibold text-sm text-[#411160]  no-underline">
-                    <li><a class="uppercase">Salaat Times</a></li>
+                    <li><a class="uppercase">Salaat Times {{.Version}}</a></li>
                     <!--<li><a class="hover:text-gray-200 hover:underline px-4" href="#">Shop</a></li>
                     <li><a class="hover:text-gray-200 hover:underline px-4" href="#">About</a></li> -->
                 </ul>
             </nav>
 
             <div class="flex items-center text-lg no-underline text-black pr-6">
-                <a class="" href="#">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a class="pl-6" href="#">
-                    <i class="fab fa-instagram"></i>
-                </a>
+
                 <a class="pl-6" href="#">
                     <i class="fab fa-twitter"></i>
                 </a>
                 <a class="pl-6" href="#">
-                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-github"></i>
                 </a>
             </div>
         </div>
